# react-fastapi-auth

./: .dockerignore  .env.example  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.jsx  index.js
client/src/actions/: index.js  types.js
client/src/components/: NavBar.jsx
client/src/pages/: Home.jsx  Login.jsx  PageNotFound.jsx  Register.jsx  Verify.jsx
client/src/reducers/: auth.js
client/src/utils/: auth.js
client/src/utils/routes/: NormalRoute.jsx  ProtectedRoute.jsx  index.js
routes/: __init__.py  auth.py
utils/: auth.py  database.py  models.py
